hphp/test/quick/final_method.php.expectf

Fatal error: Cannot override final method C::f() in %s on line 8
